<resources>
    <string name="app_name">瑞彩祥云</string>
    <string name="app_new_name">瑞彩祥云</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_apk_download">有最新的软件包，请下载！</string>
    <string name="application_version_update_down">更新最新版本，提升了用户体验。</string>
    <string name="application_update">软件版本更新</string>
    <string name="download">下载</string>
    <string name="cancel">取消</string>
    <string name="net_err_404">服务器升级维护中...</string>
    <string name="ok">确定</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="data_exception">数据异常，请稍后重试</string>
    <string name="net_exception">网络异常，请稍后重试</string>
    <string name="please_wait">请稍等&#8230;</string>
    <string name="load_more_text">加载更多中...</string>
    <string name="sp_up_hour">上一个小时收益</string>
    <string name="sp_interest_total">总金额：</string>
    <string name="how_issue">%s期</string>
    <string name="issue_lottery">%s期开奖号码</string>
    <string name="issue_num">期号</string>
    <string name="lottery_num">开奖号码</string>
    <string name="lottery_time">开奖时间</string>
    <string name="lottery_ticket">投注订单</string>
    <string name="sum_value">和值</string>
    <string name="num_size">大小</string>
    <string name="form">形态</string>
    <string name="bet_bill_detail">注单详情</string>
    <string name="some_issue">第%s期</string>
    <string name="some_issue_trace_num">第%s期起</string>
    <string name="money_with_sign">&#165;&#160;&#160;%s</string>
    <string name="delivery_prize">派送奖金</string>
    <string name="bet_detail">投注明细</string>
    <string name="prize">奖金</string>
    <string name="jsk3">江苏快3</string>
    <string name="bjk3">北京快3</string>
    <string name="xjp28">新加坡28</string>
    <string name="bj28">北京28</string>
    <string name="jnd28">加拿大28</string>
    <string name="homepage">购彩</string>
    <string name="live">直播</string>
    <string name="activity">活动</string>
    <string name="find">发现</string>
    <string name="mine">我的</string>
    <string name="all_lottery_type">全部彩种</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="custom_service">客服</string>
    <string name="contact_custom_service">联系客服</string>
    <string name="input_account_hint">请输入账号</string>
    <string name="input_check_code_hint">请输入验证码</string>
    <string name="input_psw_hint">请输入密码</string>
    <string name="get_back_psw">找回密码</string>
    <string name="immediately_login">立即登录</string>
    <string name="free_register">免费注册</string>
    <string name="immediately_register">立即注册</string>
    <string name="invite_code">邀请码</string>
    <string name="input_invite_code">请输入邀请码</string>
    <string name="set_psw">设置密码</string>
    <string name="confirm_psw">确认密码</string>
    <string name="user_register">用户注册</string>
    <string name="login_success">登录成功</string>
    <string name="touzhu_success">投注成功</string>
    <string name="touzhu_fail">投注失败</string>
    <string name="quit_login">退出登录</string>
    <string name="register_success">注册成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register_fail">注册失败</string>
    <string name="need_letter_start">必须字母开头</string>
    <string name="double_psw_not_same">两次密码不一致</string>
    <string name="invite_code_hint">6&#8211;8位数字</string>
    <string name="account_hint">请输入4&#8211;16位英文和数字</string>
    <string name="set_psw_hint">请输入6&#8211;16位字符</string>
    <string name="confirm_psw_hint">请再次输入密码</string>
    <string name="sure">确定</string>
    <string name="check_code">验证码</string>
    <string name="security_center">安全中心</string>
    <string name="bank_card_manage">银行卡管理</string>
    <string name="clear_cache">清除缓存</string>
    <string name="help_guide">帮助指南</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="activity_center">活动中心</string>
    <string name="account_saft_lv">您的账号安全级别为中</string>
    <string name="last_login_time">上次登录:%s</string>
    <string name="not_me_login">不是我登录?</string>
    <string name="change_login_psw">修改登录密码</string>
    <string name="set_saft_psw">设置安全密码</string>
    <string name="set_security_question">设置密保问题</string>
    <string name="check_security_question">验证密保问题</string>
    <string name="change">修改</string>
    <string name="old_psw">原密码</string>
    <string name="login_psw">登录密码</string>
    <string name="input_old_psw">请输入当前所使用的密码</string>
    <string name="input_login_psw">请输入登录密码</string>
    <string name="saft_psw">安全密码</string>
    <string name="input_security_psw">请输入6位数字安全密码</string>
    <string name="input_again_saft_psw">请再次输入安全密码</string>
    <string name="saft_psw_hint">安全密码用于提现、绑定银行卡等操作，可保障资金安全。</string>
    <string name="question1">问题一</string>
    <string name="question2">问题二</string>
    <string name="question3">问题三</string>
    <string name="click_chioce_security_question">点击选择密保问题</string>
    <string name="you_not_set_security_question_hint">您未设置密保问题,请联系客服找回</string>
    <string name="answer">答案</string>
    <string name="input_answer">请输入答案</string>
    <string name="cancle">取消</string>
    <string name="no_bind_bank">您还未绑定银行卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="tail_num_4">尾号：********%s</string>
    <string name="bind_bank_card">绑定银行卡</string>
    <string name="change_bank_card">修改银行卡</string>
    <string name="opener_name">开户人姓名</string>
    <string name="input_opener_name">请输入开户人姓名</string>
    <string name="please_select_bank">选择银行</string>
    <string name="please_sel_bank">请选择银行</string>
    <string name="opener_province">开户省</string>
    <string name="please_select_opener_province">请选择开户省</string>
    <string name="opener_city">开户市</string>
    <string name="please_select_opener_city">请选择开户城市</string>
    <string name="branch_bank_name">支行名称</string>
    <string name="input_branch_bank_name">请输入支行名称</string>
    <string name="bank_card_num">银行卡号</string>
    <string name="input_bank_card_num">请输入银行卡的卡号</string>
    <string name="confirm_card_num">确认卡号</string>
    <string name="input_again_card_num">请再次输入银行卡号</string>
    <string name="security_psw">安全密码</string>
    <string name="check_security_psw">验证安全密码</string>
    <string name="forget_security_psw">忘记安全密码?</string>
    <string name="old_security_psw">原安全密码</string>
    <string name="please_before_sel_opener_province">请先选择开户省</string>
    <string name="double_bank_num_differ">两次卡号不一致</string>
    <string name="my_subordinate">我的下级(人)</string>
    <string name="add_up_return_commission">累计返佣(元)：%s</string>
    <string name="return_commission_detail">返佣明细</string>
    <string name="yesterday_return_commission">昨日返佣(元)</string>
    <string name="today_return_commission">今日返佣(元)</string>
    <string name="agent_introduction">代理说明</string>
    <string name="subordinate_opener">下级开户</string>
    <string name="agent_report_forms">代理报表</string>
    <string name="team_report_forms">团队报表</string>
    <string name="subordinate_report_forms">下级报表</string>
    <string name="subordinate_manage">下级管理</string>
    <string name="subordinate_bet_detail">下级投注明细</string>
    <string name="subordinate_business_detail">下级交易明细</string>
    <string name="agent_center">代理中心</string>
    <string name="date_section_return_commission">日期区间返佣收益(元)</string>
    <string name="return_commission_detail_data_hint">返佣明细仅保留本月及前两月的数据</string>
    <string name="money_sign">&#165;</string>
    <string name="please_sel_start_time">请选择开始时间</string>
    <string name="please_sel_end_time">请选择结束时间</string>
    <string name="please_set_subordinate_type_return_point">请为下级设置类型和返点</string>
    <string name="look_return_point_report">查看返点赔率表</string>
    <string name="open_type">开户类型</string>
    <string name="agent_type">代理类型</string>
    <string name="player_type">玩家类型</string>
    <string name="subordinate_opener_hint">自身返点%s,可设置返点0.0&#8211;%s</string>
    <string name="generate_invite">生成邀请码</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="current_month">本月</string>
    <string name="last_month">上月</string>
    <string name="input_subordinate_agent_account">请输入下级代理账号</string>
    <string name="search">搜索</string>
    <string name="who_team_report_forms">%s的团队报表</string>
    <string name="who_subordinate">%s的下级</string>
    <string name="colon">:</string>
    <string name="activity_cash_gift">活动礼金(元)</string>
    <string name="prize_money">中奖金额(元)</string>
    <string name="prize_">中奖</string>
    <string name="already_prize">已中奖</string>
    <string name="bet_money">投注金额(元)</string>
    <string name="team_return_commission">团队返佣(元)</string>
    <string name="team_profit_loss">团队盈亏(元)</string>
    <string name="return_point_commission">返点佣金(元)</string>
    <string name="team_profit_loss_calculate">团队盈亏计算公式:中奖-投注+活动+团队返佣</string>
    <string name="recharge_money">充值金额(元)</string>
    <string name="withdrawal_money">提现金额(元)</string>
    <string name="team_surplus_money">团队余额(元)</string>
    <string name="first_recharge_people">首充人数(人)</string>
    <string name="register_people">注册人数(人)</string>
    <string name="bet_people">投注人数(人)</string>
    <string name="noun_explain">名词解释</string>
    <string name="team_report_forms_bottom_hint">以上是代理的团队数据（即他的所有下级的数据汇总）</string>
    <string name="level">等级</string>
    <string name="bet">投注</string>
    <string name="profit_and_loss">盈亏</string>
    <string name="filter">筛选</string>
    <string name="seven_days">七天</string>
    <string name="sort">排序</string>
    <string name="return_commission">返佣</string>
    <string name="recharge">充值</string>
    <string name="ascending_order">升序</string>
    <string name="descending_order">降序</string>
    <string name="longfrageon">长龙助手</string>
    <string name="gift_money">礼金</string>
    <string name="withdrawal">提现</string>
    <string name="subordinate_num">下级人数：%s人</string>
    <string name="all_data_load_finish">数据全部加载完毕</string>
    <string name="look_return_point">查看返点</string>
    <string name="look_subordinate">查看下级</string>
    <string name="return_point_detail">返点详情</string>
    <string name="all">全部</string>
    <string name="not_prize">未中奖</string>
    <string name="wait_prize">等待开奖</string>
    <string name="register_num">注册(%s)</string>
    <string name="invite_code_num">邀请码:%s</string>
    <string name="copy_invite_code">复制邀请码</string>
    <string name="copy_register_link">复制注册链接</string>
    <string name="chongqissc">重庆时时彩</string>
    <string name="beijingsaiche">北京赛车</string>
    <string name="xingyunfeiting">幸运飞艇</string>
    <string name="tianjinssc">天津时时彩</string>
    <string name="recharge_income">充值入款</string>
    <string name="withdraw_withhold">提现扣款</string>
    <string name="bet_withhold">投注扣款</string>
    <string name="everyday_bonus_prize">每日加奖</string>
    <string name="prize_deliver">奖金派送</string>
    <string name="promotion_prize">晋级奖励</string>
    <string name="track_repay">追号返款</string>
    <string name="bet_cancel_order">投注撤单</string>
    <string name="return_point_commission_not_unit">返点佣金</string>
    <string name="other_disount">其他优惠</string>
    <string name="tie_repay">和局返款</string>
    <string name="red_package_receive">红包领取</string>
    <string name="red_package_send">红包发放</string>
    <string name="red_package_back">红包退回</string>
</resources>